kubernetes/ckad/photoshow/a-namespace-photoshow.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: photoshow
spec: {}
status: {}
