kubernetes/ckad/photoshow/photoshow-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: photoshow
  name: photoshow
  namespace: photoshow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photoshow
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: photoshow
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - arm64
      containers:
      - image: linuxserver/photoshow:latest
        name: photoshow
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
          - mountPath: /config
            name: photoshow-config-volume
          - mountPath: /Pictures
            name: photoshow-pictures-volume
          - mountPath: /Thumbs
            name: photoshow-thumbs-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: photoshow-config-volume
          persistentVolumeClaim:
            claimName: photoshow-cephfs-config-pvc
        - name: photoshow-pictures-volume
          persistentVolumeClaim:
            claimName: photoshow-cephfs-pictures-pvc
        - name: photoshow-thumbs-volume
          persistentVolumeClaim:
            claimName: photoshow-cephfs-thumbs-pvc
