kubernetes/ckad/photoshow/photoshow-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: photoshow
  name: photoshow
  namespace: photoshow
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: photoshow
