kubernetes/ckad/photoshow/photoshow-traefic-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: photoshow
  namespace: photoshow
spec:
  rules:
  - host: photoshow.fritz.box
    http:
      paths:
      - backend:
          service:
            name: photoshow
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
